# SimAtlas2

./: .gitignore  PROJECT_PLAN.md  README.md  launch.cmd  launch.py  pyproject.toml  readme.txt
sample_data/: demo_save.s2json
src/s2saveforge/: __init__.py  __main__.py  main.py
src/s2saveforge/core/: models.py  parser.py  service.py  simpe_reference.py  validators.py
src/s2saveforge/ui/: main_window.py
tests/: test_main_window.py  test_service.py  test_simpe_reference.py  test_validators.py
