[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2-save-forge"
version = "0.1.0"
description = "Desktop editor foundation for The Sims 2 save data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "S2 Save Forge Team" }]
dependencies = [
  "PySide6>=6.7,<7",
]

[project.scripts]
s2-save-forge = "s2saveforge.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
